<resources>

    <!-- GENERAL -->
    <string name="app_name">DreamDaddy</string>
    <string name="companyName">AnOtterLove.SA</string>

    <!-- TEXT VIEWS -->
    <string name="label_register">Formulario</string>
    <string name="label_login">¡Bienvenido!</string>
    <string name="label_sugarForm">¡Un último paso!</string>
    <string name="labelInformation">Informacion</string>
    <string name="labelRoleSelection">¡Elige rol!</string>
    <string name="labelSugarDaddyRole">Sugar Daddy</string>
    <string name="labelSugarBabyRole">Sugar Baby</string>
    <string name="labelSelectedProfile">Ejemplo de\nPerfil Seleccionado\nSaltos de línea</string>

    <!-- BUTTONS -->
    <string name="button_register">Registrarse</string>
    <string name="button_login">INICIAR SESIÓN</string>
    <string name="button_form">¡Listo!</string>

    <!-- SPINNERS -->
    <string name="spinner_province">Provincia</string>
    <string name="spinner_money">¿Cuánto manejas?</string>
    <string name="spinner_complexion">Complexión</string>
    <string name="spinner_style">¿Cuál es tu estilo?</string>
    <string name="spinner_idealBaby">Tu sugar Baby ideal es...</string>

    <!-- IMAGE VIEW CONTENT DESCRIPTIONS -->
    <string name="logoContentDescription">El logo de la aplicación DreamDaddy</string>
    <string name="sugarDaddyContentDescription">Sugar Daddy</string>
    <string name="sugarBabyContentDescription">Sugar Baby</string>
    <string name="profileDescription">Tu avatar</string>

    <!-- SUGAR DADDIES AND SUGAR BABIES -->
    <string name="imagePersonContentDescription">Avatar del perfil seleccionado</string>
    <string name="sugarDaddy_intellectual">Sugar Daddy: Intellectual Role</string>
    <string name="sugarDaddy_baddy">Sugar Daddy: Baddy Role</string>
    <string name="sugarDaddy_bear">Sugar Daddy: Bear Role</string>
    <string name="sugarDaddy_modern">Sugar Daddy: Modern Role</string>
    <string name="sugarDaddy_sporty">Sugar Daddy: Sporty Role</string>
    <string name="sugarDaddy_sophisticated">Sugar Daddy: Sophisticated Role</string>
    <string name="sugarDaddy_gothic">Sugar Daddy: Gothic Role</string>
    <string name="sugarDaddy_other">Sugar Daddy: Other Role</string>
    <string name="sugarBaby_otter">Sugar Baby: Otter Role</string>
    <string name="sugarBaby_spoiled">Sugar Baby: Spoiled Role</string>
    <string name="sugarBaby_fancy">Sugar Baby: Fancy Role</string>
    <string name="sugarBaby_cub">Sugar Baby: Cub Role</string>
    <string name="sugarBaby_chub">Sugar Baby: Chub Role</string>
    <string name="sugarBaby_romantic">Sugar Baby: Romantic Role</string>
    <string name="sugarBaby_emo">Sugar Baby: Emo Role</string>
    <string name="sugarBaby_other">Sugar Baby: Other Role</string>

    <!-- CLOUD FIRESTORE -->
    <string name="insertSuccess">¡Registrado correctamente!</string>
    <string name="insertFailure">Error al registrarse. Prueba de nuevo</string>
    <string name="credentialsSuccess">Credenciales creadas</string>
    <string name="credentialsFailure">Error creando credenciales</string>
    <string name="loginSuccess">¡Iniciaste sesión!</string>
    <string name="loginFailure">Error al iniciar sesión. Prueba de nuevo.</string>

    <!-- OTHERS -->
    <string name="username">Nombre de usuario</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="birthDate">Fecha de nacimiento</string>
    <string name="telephone">Ver número de la persona</string>
    <string name="profile">Perfil</string>
    <string name="settings">Ajustes</string>
    <string name="waiting_input">Escribe el nuevo dato</string>
    <string name="saveChanges">Guardar</string>
    <string name="emptyInput">¡El campo está vacío!</string>

</resources>
