<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutParentRoleSelection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollRoleSelection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutRoleSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelRoleSelection"
                style="@style/textHeaders"
                android:layout_marginBottom="50dp"
                android:text="@string/labelRoleSelection"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/labelRoleSelectionSugarDaddy"
                style="@style/textSubHeaders"
                android:layout_marginTop="50dp"
                android:text="@string/labelSugarDaddyRole"
                android:textColor="@color/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelRoleSelection" />

            <ImageButton
                android:id="@+id/imageButtonSugarDaddyRoleSelection"
                style="@style/imageButtonRoleSelection"
                android:contentDescription="@string/labelSugarDaddyRole"
                android:onClick="sugarDaddyRole"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelRoleSelectionSugarDaddy"
                app:srcCompat="@drawable/daddy_intellectual" />

            <TextView
                android:id="@+id/labelRoleSelectionSugarBaby"
                style="@style/textSubHeaders"
                android:layout_marginTop="25dp"
                android:text="@string/labelSugarBabyRole"
                android:textColor="@color/text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonSugarDaddyRoleSelection" />

            <ImageButton
                android:id="@+id/imageButtonSugarBabyRoleSelection"
                style="@style/imageButtonRoleSelection"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/labelSugarBabyRole"
                android:onClick="sugarBabyRole"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelRoleSelectionSugarBaby"
                app:srcCompat="@drawable/baby_otter" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>